2007-02-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	* ima/src/client.h:
	changed title of client-window, now only hostname + classroom are
	displayed - user-name is as usual displayed as tooltip

	* setup/resources/de.qm:
	* setup/resources/de.ts:
	updated German translation

	* setup/src/dialogs.cpp:
	* setup/src/dialogs.h:
	if exported-key already exists, ask whether to overwrite and if so do
	so instead of failure silently

2007-01-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/x11/x11vnc/x11vnc.1:
	removed as accidently added to repo somewhen

	* ima/src/client_manager.cpp:
	when auto-arranging windows, include decoration-width and -height in
	calculation - fixes bug described in
	http://sourceforge.net/forum/message.php?msg_id=4110695

	* ima/src/tool_button.cpp:
	set button-title as text - if toolbar is not completely visible, a
	button on the right opens a menu with actions which did not fit into
	available space - each menu-item is labeled with button-title and if
	it is not set, there're only empty items...

2007-01-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.cpp:
	disable action for showing/hiding toolbar

2007-01-15	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* setup/src/dialogs.h:
	* setup/src/dialogs.cpp:
	fixed bug which made auto-setup not work if
	iTALC-installation-directory was not existing

2007-01-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* setup/dialogs/page_setup_finished.ui:
	* setup/src/dialogs.h:
	* setup/src/main.cpp:
	* setup/src/dialogs.cpp:
	first initial (incomplete) support for auto-setup

2007-01-07	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.0.0-rc2 release

	* INSTALL:
	added missing build-requirement

	* Makefile.am:
	added some "rm -f"-calls to clean-target for not leaving files created
	during build-process

	* setup/Makefile.am: