@@ -1,3 +1,10 @@
+2007-02-03	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ica/src/system_key_trapper.cpp:
+	disable sticky-keys and according confirmation-dialog while
+	system-keys are trapped - fixes issue where users could cheat while
+	screen is locked by pressing shift 5 times
+
 2007-02-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ima/src/client.cpp:
